[gd_scene load_steps=7 format=2]

[ext_resource path="res://main/menu_bar/menu.gd" type="Script" id=1]
[ext_resource path="res://main/menu_bar/file.gd" type="Script" id=2]
[ext_resource path="res://viewport/viewport.gd" type="Script" id=3]
[ext_resource path="res://main/main.gd" type="Script" id=4]
[ext_resource path="res://viewport/camera.gd" type="Script" id=5]
[ext_resource path="res://main/menu_bar/project.gd" type="Script" id=7]

[node name="Main" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="PanelContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="VBox/MenuBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 27.0

[node name="File" type="MenuButton" parent="VBox/MenuBar/HBox"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
script = ExtResource( 2 )

[node name="Project" type="MenuButton" parent="VBox/MenuBar/HBox"]
margin_left = 39.0
margin_right = 96.0
margin_bottom = 20.0
disabled = true
text = "Project"
script = ExtResource( 7 )

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="Viewport" type="ViewportContainer" parent="VBox/HBox"]
margin_right = 1024.0
margin_bottom = 566.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="VBox/HBox/Viewport"]
size = Vector2( 1024, 566 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="VBox/HBox/Viewport/Viewport"]
transform = Transform( -0.999947, 0, -0.0102625, 0, 1, 0, 0.0102625, 0, -0.999947, 0, 0, 0 )
script = ExtResource( 5 )
movement_speed = 5.0
sensitivity = 4.54
roll_speed = 3.0

[node name="Stars" type="Spatial" parent="VBox/HBox/Viewport/Viewport"]

[connection signal="closed_dir" from="VBox/MenuBar/HBox/File" to="." method="_on_File_closed_dir"]
[connection signal="opened_dir" from="VBox/MenuBar/HBox/File" to="." method="_on_File_opened_dir"]
[connection signal="edited_project" from="VBox/MenuBar/HBox/Project" to="." method="_on_Project_edited_project"]
